[jps build] provide a way to pass workspace model to the JPS build process in serialized way (IJPL-409)
If newly introduced 'jps.build.use.workspace.model' registry option is enabled, required modules and libraries are added to the JPS build classpath, paths to global and project cache file for the workspace model are passed to the build process, and it loads the project model from them instead of reading the project configuration files.

It's an experimental approach, and it isn't fully implemented yet:
 * it doesn't ensure that caches are up-to-date;
 * the cache currently cannot be loaded by the build process because it references entities and other classes aren't available in the build process (e.g. ScratchRootsEntity and VirtualFileUrlBridge).

GitOrigin-RevId: 54a4a49566ca9dd0433c7a13251c2e28fc051e78